--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2439,6 +2439,12 @@
                             <div class="loader"></div>
                             <!-- TODO :: SHOW ALL PROJECTS LIST END HERE -->
                         </div>
+                        <div style="width: 100%; height:50vh" class="d-flex justify-content-center align-items-center d-none" id="no-result">
+                            <div class="d-flex justify-content-center align-items-center flex-column">
+                                <i class="bi bi-journal-x text-white" style="font-size: 6rem;"></i>
+                                <h1 class="text-white">No Project Found!</h1>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <!-- project end -->
