--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2333,7 +2333,16 @@
 
                 <!-- Search Start -->
                 <div class="container-fluid pt-2 ps-s pe-2" id="dropdrown-search-bar">
-                    <div class="d-flex flex-row justify-content-end gap-2">
+                    <div class="d-flex flex-row justify-content-between align-items-center">
+
+                        <nav class="">
+                            <ol class="breadcrumb mb-0">
+                                <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                                <li class="breadcrumb-item active">Project List</li>
+                            </ol>
+                        </nav>
+
+                        <div>
 
                         <button
                             class="btn btn-info"
@@ -2401,7 +2410,7 @@
                         <!-- add department modal end -->
                         <!-- sortting button -->
                         <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
-
+                        </div>
                         <!-- Modal -->
                     </div>
                 </div>
