--- a/src/main/resources/templates/department.html
+++ b/src/main/resources/templates/department.html
@@ -329,16 +329,20 @@
 
         <!-- Search Start -->
         <div class="container-fluid d-md-block pt-2 ps-s pe-2" id="dropdrown-search-bar">
-
-            <div class="d-flex flex-row justify-content-end gap-2">
-
-                <form class="d-inline-block">
-                    <input class="form-control border-0" type="search" placeholder="Search"/>
-                </form>
-
-                <!-- sortting button -->
-                <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
-
+            <div class="d-flex flex-row justify-content-between align-items-center">
+                <nav class="">
+                    <ol class="breadcrumb mb-0">
+                        <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Departments</li>
+                    </ol>
+                </nav>
+                <div>
+                    <form class="d-inline-block">
+                        <input class="form-control border-0" type="search" placeholder="Search"/>
+                    </form>
+                    <!-- sortting button -->
+                    <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
+                </div>
             </div>
         </div>
         <!-- Search End -->
