--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -61,7 +61,17 @@
         >
 
 
-            <div class="d-flex flex-row justify-content-end gap-2">
+            <div class="d-flex flex-row justify-content-between align-items-center">
+
+                <nav class="">
+                    <ol class="breadcrumb mb-0">
+                        <li class="breadcrumb-item"><a href="/dashboard">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Issue List</li>
+                    </ol>
+                </nav>
+
+                <div>
+
                 <button class="btn btn-info" id="reset-btn" style="color: #ffffff !important;">
                     reset
                 </button>
@@ -113,7 +123,7 @@
                 <i class="bi bi-sort-alpha-down sort-btn text-dark"></i>
 
                 </div>
-
+                </div>
                 <!-- Modal -->
             </div>
 
