--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -2827,6 +2827,15 @@
         <div class="modal fade" id="project-details" data-bs-keyboard="true">
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content opacity-0">
+                    <div class="modal-header d-flex p-2">
+                        <h2 class="modal-title fs-5 flex-grow-1 text-center fw-bold" style="text-align: center">Project Details</h2>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                            aria-label="Close"
+                        ></button>
+                    </div>
                     <div class="col">
                         <ul class="nav nav-tabs nav-tabs-bordered">
                             <li class="nav-item">
