Issue Page Fixes

--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -172,7 +172,7 @@
                     if(user.currentUser.role === 'SDQC' || user.currentUser.role === 'PMO') {
                         document.querySelector("button[data-bs-target='#all-issue-list']").remove()
                         document.querySelector("button[data-bs-target='#unsolved-issues']").remove()
-                        document.querySelector("button[data-bs-target='#new-issue-list']").remove()
+                        document.querySelector("button[data-bs-target='#new-issue-list-container']").remove()
 
                     }
 
